@@ -61,7 +61,7 @@ TYPO3Color = HTMLArea.Plugin.extend({
 		/*
 		 * Registering the buttons
 		 */
-		var buttonList = this.buttonList;
+		var buttonList = this.buttonList, buttonId;
 		for (var i = 0; i < buttonList.length; ++i) {
 			var button = buttonList[i];
 			buttonId = button[0];
